--- a/blogs/index.html
+++ b/blogs/index.html
@@ -6,6 +6,10 @@
   <title>Document</title>
 </head>
 <body>
-  <p>this is a new blog page </p>
+  <article>
+    <h2>The new blog post</h2>
+    <p>this is a description </p>
+  </article>
+
 </body>
 </html>
