--- a/blogs/index.html
+++ b/blogs/index.html
@@ -10,6 +10,10 @@
     <h2>The new blog post</h2>
     <p>this is a description </p>
   </article>
+  <article>
+    <h2>The new blog post 2</h2>
+    <p>this is a description </p>
+  </article>
 
 </body>
 </html>
