--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <a href="/blogs/index.html">New blog page</a>
   <img src="./images/Beard Oil.jpg" alt="">
 
-  <p>New Change</p>
-  <p>New Change 2</p>
+  <p>Home Page updated</p>
 </body>
 </html>
