changed the paragraph tag

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <a href="/blogs/index.html">New blog page</a>
   <img src="./images/Beard Oil.jpg" alt="">
 
-  <p>home page is added</p>
+  <p>home page 1</p>
 </body>
 </html>
